--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -169,11 +169,21 @@
   </div>
 
   <script>
-    document.getElementById('last-updated').textContent =
-      new Date().toLocaleDateString('de-DE',{year:'numeric',month:'2-digit',day:'2-digit'});
-  </script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const el = document.getElementById('last-updated');
+    if (el) {
+      el.textContent = new Date().toLocaleDateString('de-DE', {
+        day: '2-digit',
+        month: 'long',
+        year: 'numeric'
+      });
+    }
+  });
+</script>
+
 </body>
 </html>
+
 
 
 
