--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -153,7 +153,7 @@
         <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, wenn sich gesetzliche Vorgaben oder technische Änderungen ergeben. Die jeweils aktuelle Version ist immer hier abrufbar.</p>
 
         <hr>
-        <p class="muted">Hinweis: Diese Erklärung wurde auf die Kampagne „Solarstrom statt Erdgas-Strom“ zugeschnitten. Bitte überprüfe sie regelmäßig und ergänze ggf. Details zu Speicherfristen oder AV-Verträgen.</p>
+        <p class="muted">Hinweis: Diese Erklärung wurde auf die Kampagne „Solarstrom statt Erdgas-Strom“ zugeschnitten. Sie wird regelmäßig überprüft und und ergänzt ggf. mit Details zu Speicherfristen oder AV-Verträgen.</p>
       </section>
     </main>
 
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
