--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -34,15 +34,36 @@
       --brand2:#0bbd54;
       --bg:#f6f9f7;
       --card:#fff;
+      --ink:#111;
       --muted:#6b7280;
+      --border:#e5e7eb;
       --radius:16px;
       --shadow:0 6px 28px rgba(0,0,0,.08);
-      --border:#e5e7eb;
+      --link:#0a7d32;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root{
+        --bg:#0b0f0d;
+        --card:#1a1f1c;
+        --ink:#e8f0e9;
+        --muted:#9ba8a0;
+        --border:#2a322c;
+        --shadow:0 6px 28px rgba(0,0,0,.4);
+        --link:#9ef29c;
+      }
     }
 
     *{box-sizing:border-box}
-    body{margin:0;font:16px/1.6 "Inter",system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#111;background:var(--bg);}
-    a{color:inherit}
+    html,body{margin:0;padding:0}
+    body{
+      font:16px/1.6 "Inter",system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--ink);
+      background:var(--bg);
+      transition:background-color .3s,color .3s;
+    }
+    a{color:var(--link);text-decoration:none}
+    a:hover{text-decoration:underline}
     .page{display:grid;grid-template-columns:1fr minmax(0,var(--maxw)) 1fr;}
     .middle{grid-column:2;padding:16px;}
     main.middle>section{margin:22px 0;}
@@ -57,6 +78,7 @@
     .hero-panel{
       background:rgba(10,125,50,.82);color:#fff;border-radius:22px;padding:22px 24px;
       max-width:min(92vw,820px);text-align:center;box-shadow:0 18px 48px rgba(0,0,0,.18);
+      transition:background .3s;
     }
     .hero .logo img{
       width:clamp(220px,48vw,520px);height:auto;display:block;margin:0 auto 6px;
@@ -70,14 +92,22 @@
     }
 
     /* Card */
-    .card{border:1px solid var(--border);border-radius:14px;padding:22px;background:var(--card);box-shadow:var(--shadow);}
+    .card{
+      border:1px solid var(--border);
+      border-radius:14px;
+      padding:22px;
+      background:var(--card);
+      box-shadow:var(--shadow);
+      transition:background .3s,color .3s,border-color .3s;
+    }
     h2{margin-top:1.6em;font-size:1.18rem;}
     ul{padding-left:18px;}
     code{background:#f4f6f5;padding:2px 4px;border-radius:4px;}
 
     /* Footer */
-    footer .legal{text-align:center;display:block;margin:24px 0 10px;}
-    footer a{color:#333;}
+    footer{margin:40px 0 16px;text-align:center;font-size:.95rem;}
+    footer a{color:var(--link);}
+    footer .muted{color:var(--muted);}
   </style>
 </head>
 
@@ -153,15 +183,15 @@
         <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, wenn sich gesetzliche Vorgaben oder technische Änderungen ergeben. Die jeweils aktuelle Version ist immer hier abrufbar.</p>
 
         <hr>
-        <p class="muted">Hinweis: Diese Erklärung wurde auf die Kampagne „Solarstrom statt Erdgas-Strom“ zugeschnitten. Sie wird regelmäßig überprüft und und ergänzt ggf. mit Details zu Speicherfristen oder AV-Verträgen.</p>
+        <p class="muted">Hinweis: Diese Erklärung wurde auf die Kampagne „Solarstrom statt Erdgas-Strom“ zugeschnitten. Sie wird regelmäßig überprüft und ggf. ergänzt mit Details zu Speicherfristen oder AV-Verträgen.</p>
       </section>
     </main>
 
     <footer class="middle">
       <p class="legal">
-        <a href="https://www.aktionsolarstrom.de/">Startseite</a>
-        · <a href="Datenschutz.html" aria-current="page">Datenschutz</a>
-        · <a href="Impressum.html">Impressum</a>
+        <a href="https://www.aktionsolarstrom.de/">Startseite</a> · 
+        <a href="Datenschutz.html" aria-current="page">Datenschutz</a> · 
+        <a href="Impressum.html">Impressum</a>
       </p>
       <p class="muted">Eine Kampagne von Leben mit der Energiewende, VEEG und Energy Watch Group · Diensteanbieter: Media International Bader</p>
       <p class="muted">© Media International Bader</p>
@@ -169,20 +199,21 @@
   </div>
 
   <script>
-  window.addEventListener('DOMContentLoaded', () => {
-    const el = document.getElementById('last-updated');
-    if (el) {
-      el.textContent = new Date().toLocaleDateString('de-DE', {
-        day: '2-digit',
-        month: 'long',
-        year: 'numeric'
-      });
-    }
-  });
-</script>
-
+    window.addEventListener('DOMContentLoaded',()=>{
+      const el=document.getElementById('last-updated');
+      if(el){
+        el.textContent=new Date().toLocaleDateString('de-DE',{
+          day:'2-digit',
+          month:'long',
+          year:'numeric'
+        });
+      }
+    });
+  </script>
 </body>
 </html>
+
+
 
 
 
